--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+}
+.app-container {
+  display: flex;
+  flex-direction: column;
+}
+.note-container {
+  justify-self: center;
 }
