--- a/src/components/notes/noteCard/noteCard.module.scss
+++ b/src/components/notes/noteCard/noteCard.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     font-family: 'Times New Roman', Times, serif;
-    width: 100%;
     height: min-content;
     margin: 5px;
     padding: 5px;
@@ -32,7 +31,7 @@
 }
 .description {
     width: min-content;
-    background-color: #edffd9;
+    // background-color: #edffd9;
     border-radius: 5px;
     overflow-wrap: break-word;
     margin: 10px;
