--- a/src/components/header/chip/chip.module.scss
+++ b/src/components/header/chip/chip.module.scss
@@ -2,6 +2,7 @@
     border: 2px solid orange;
     width: min-content;
     padding: 5px;
+    margin: 2px;
     border-radius: 17px;
     &:hover {
         cursor: pointer;
