--- a/src/components/notes/editingDescription/editingDescription.module.scss
+++ b/src/components/notes/editingDescription/editingDescription.module.scss
@@ -4,8 +4,10 @@
 .container {
     display: flex;
     flex-direction: column;
+    width: 400px;
 }
 .buttonContainer {
     display: flex;
     align-self: flex-end;
+    margin-top: 3px;
 }
