add tags component

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,15 +5,10 @@
 .app-container {
   display: flex;
   flex-direction: column;
-}
-.header-container {
-  width: 90vw;
-  align-self: center;
-  margin-top: 5px;
-}
-.add-note-btn {
-  align-self: center;
-}
-.note-container {
-  align-self: center;
+  align-items: center;
+
+  .hash-tags-container {
+    width: 90vw;
+    margin-top: 5px;
+  }
 }
