--- a/src/components/content/editingDescription/editingDescription.module.scss
+++ b/src/components/content/editingDescription/editingDescription.module.scss
@@ -4,10 +4,15 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    // width: 400px;
+    
 }
 .buttonContainer {
     display: flex;
     align-self: flex-end;
     margin-top: 3px;
 }
+::-webkit-scrollbar {
+    width: 0px;
+    background: rgba(255, 255, 255, 0.0);
+  }
