--- a/src/components/header/addNoteForm/addNoteForm.module.scss
+++ b/src/components/header/addNoteForm/addNoteForm.module.scss
@@ -1,13 +1,27 @@
 * {
     box-sizing: border-box;
 }
-.formContainer {
-    display: flex;
-    flex-direction: column;
-}
-.inputDescription {
-    margin-top: 10px;
-}
-.buttons {
-    margin-top: 10px;
+.myForm {
+    display: grid;
+    grid-template-columns: [labels] auto [controls] 1fr;
+    grid-auto-flow: row;
+    grid-gap: .8em;
+    background: beige;
+    padding: 1.2em;
+    label {
+        font-size: 20px;
+        grid-column: labels;
+        grid-row: auto;
+    }
+    input {
+        border: 1px solid teal;
+        border-radius: 3px;
+    }
+    input, textarea {
+        grid-column: controls;
+        grid-row: auto;
+    }
+    .buttons {
+        grid-column: span 2;
+    }
 }
