complete card component

--- a/src/components/content/noteContainer/noteContainer.module.scss
+++ b/src/components/content/noteContainer/noteContainer.module.scss
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(7, 180px);
+    grid-template-columns: repeat( auto-fit, 180px);
     grid-template-rows: 230px;
     justify-content: space-around;
     grid-row-gap: 7px;
