--- a/src/components/content/noteCard/noteCard.module.scss
+++ b/src/components/content/noteCard/noteCard.module.scss
@@ -11,90 +11,16 @@
     box-sizing: border-box;
     position: relative;
     &:hover {
-        .tags {
-            height: min-content;
-        }
+        // .tags {
+        //     height: min-content;
+        // }
         z-index: 1;
-        width: 190px;
         min-height: 230px;
         height: min-content;
         background-color: white;
         overflow-wrap: break-word;
         cursor: default;
-    }
-}
-.cardHeader {
-    display: flex;
-    height: min-content;
-    margin-left: 40px;
-    .title {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-right: 22px;
-    }
-    .deleteCardBtn {
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding: 3px;
-        align-self: flex-end;
-        border: none;
-        background-color: inherit;
-        &:hover {
-            opacity: 0.8;
-            cursor: pointer;
-        }
-    }
-}
-.description {
-    width: 100%;
-    border-radius: 5px;
-    height: min-content;
-    margin: 10px 5px 5px 0;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    overflow-wrap: break-word;
-    background-color: #edffd9;
-    &:hover {
-        cursor: url("../../../icons/cursor-pencil.png") 2 2, pointer;
-    }
-}
-.tags {
-    margin: auto 10px 10px 10px;
-    height: 14px;
-    border-top: 1px solid orange;
-}
-.addTagBtn {
-    height: 25px;
-    width: 25px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 50%;
-    background-color: green;
-    font-size: 1.2rem;
-    color: white;
-    margin-right: 3px;
-    rotate: 45%;
-    &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-    }
-}
-.addTagInput {
-    bottom: 2px;
-    width: 105px;
-    border: 1px solid teal;
-    border-radius: 2px;
-}
-.closeIconBtn, .addTagIcon {
-    border: none;
-    background-color: transparent;
-    img {
-        vertical-align: middle;
-    }
-    &:hover {
-        cursor: pointer;
-        opacity: 0.8;
+        box-shadow: 0 0 5px teal;
     }
 }
 .hide {
