--- a/src/shared/inputForEditing/inputForEditing.module.scss
+++ b/src/shared/inputForEditing/inputForEditing.module.scss
@@ -1,10 +1,10 @@
-.addTagInput {
+.input {
     bottom: 2px;
     width: 78px;
     border: 1px solid teal;
     border-radius: 2px;
 }
-.closeIconBtn, .addTagIcon {
+.closeIconBtn, .confirmIconBtn {
     border: none;
     background-color: transparent;
     img {
